[gd_scene load_steps=5 format=3 uid="uid://8tp7x6p22sqm"]

[ext_resource type="Texture2D" uid="uid://doceofeje4d5w" path="res://assets/ui/panel_beige.png" id="1_3r2e7"]
[ext_resource type="LabelSettings" uid="uid://f6mpg04x8vtm" path="res://Resources/white_48_font.tres" id="2_anpwf"]
[ext_resource type="Script" uid="uid://d1ch02cmlff22" path="res://Scenes/LevelButton/LevelButton.gd" id="2_uqdhg"]
[ext_resource type="LabelSettings" uid="uid://ekghqn6m4pes" path="res://Resources/white_32_font.tres" id="3_uqdhg"]

[node name="LevelButton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("1_3r2e7")
script = ExtResource("2_uqdhg")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 12

[node name="VB" type="VBoxContainer" parent="MC"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LevelLabel" type="Label" parent="MC/VB"]
layout_mode = 2
text = "3"
label_settings = ExtResource("2_anpwf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="MC/VB"]
layout_mode = 2
text = "999"
label_settings = ExtResource("3_uqdhg")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
